--- a/css/webpage.css
+++ b/css/webpage.css
@@ -6,7 +6,7 @@
 
 .webpage-canvas-placement{
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   margin-top: 50px;
 }
 
@@ -24,4 +24,39 @@
 
 .hidden{
   display: none;
+}
+
+
+.controls-placement{
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  justify-content: center;
+}
+
+.controls-styling{
+  padding: 10px;
+  border: 1px solid #808080;
+  box-shadow: -4px 4px #fab6c4, 4px 4px #fab5c3, 5px 4px #ffb7c5, -2px 0px #ffb7c5, 3px -2px #ffb7c5;
+  background-color: ghostwhite;
+  border-radius: 3px;
+  border: 1px solid transparent;
+  border-top: none;
+  border-bottom: 1px solid #DDD;
+  box-shadow: inset 0 1px 2px rgba(0,0,0,.39), 0 -1px 1px #FFF, 0 1px 0 #FFF;
+}
+
+h3{
+  font-weight: bold;
+}
+
+.control-instruction-placement{
+  display: flex;
+  flex-direction: column;
+}
+
+.control-instruction-styling{
+  /* margin-bottom: 5px;
+  margin-top: 5px; */
+  margin: 10px;
 }
