--- a/css/webpage.css
+++ b/css/webpage.css
@@ -32,6 +32,7 @@
   flex-direction: column;
   text-align: center;
   justify-content: center;
+  padding: 15px;
 }
 
 .controls-styling{
@@ -76,4 +77,29 @@ h3{
   display: block;
   width: 50%;
   height: auto;
+}
+
+.username{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-content: center;
+  align-items: center;
+  height: 50px;
+  top: 435px;
+  position: absolute;
+  z-index: 1;
+  right: 362px;
+}
+
+.username-textbox{
+  background: white;
+  text-align: center;
+}
+
+.username-submit{
+  width: 65px;
+  background: pink;
+  border-radius: 5px;
+  text-align: center;
 }
