--- a/css/canvas.css
+++ b/css/canvas.css
@@ -7,8 +7,15 @@ canvas{
   min-height: 300px;
   margin-left: 20px;
   margin-right: 20px;
+
 }
 
 .canavs-background{
-  background-image: (images/Mount_Fuji_from_mount_tanjo.jpg);
+  background-image: url("https://i.imgur.com/jyFcLJ2.gif");
+  background-image: image("images/fuji.gif");
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 100%;
+  background-position: top;
 }
