--- a/css/canvas.css
+++ b/css/canvas.css
@@ -12,10 +12,8 @@ canvas{
 
 .canavs-background{
   background-image: url("https://i.imgur.com/jyFcLJ2.gif");
-  background-image: image("images/fuji.gif");
   background-repeat: no-repeat;
-  background-size: cover;
-  width: 100%;
-  height: 100%;
   background-position: top;
+  background-size: 900px 449px;
+  background-position-y: -50px;
 }
