--- a/css/webpage.css
+++ b/css/webpage.css
@@ -65,7 +65,7 @@ h3{
   display: flex;
   justify-content: space-evenly;
   margin-bottom: 20px;
-  margin-top: 10px;
+  margin-top: 20px;
 }
 
 .icon-placement{
@@ -152,4 +152,8 @@ h1{
 .center{
   display: flex;
   justify-content: center;
+}
+
+.size{
+  max-width: 375;
 }
